# AdbBar

./: README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  make_icon.py  tray-adb.rgba
src-tauri/src/: adb.rs  lib.rs  locale.rs  main.rs  scanner.rs  scrcpy.rs  store.rs
src/lib/: AddDevice.svelte  DeviceList.svelte  DeviceRow.svelte  ScanView.svelte  Settings.svelte  api.ts  errors.ts  stores.svelte.ts  stores.ts  types.ts
src/lib/i18n/: en.ts  index.ts  zh.ts
